# CollaborativeSystemProject

./: .gitignore  .gitmodules  README.md
src/PowerLineThesis/3D_estimator/: CMakeLists.txt  package.xml
src/PowerLineThesis/3D_estimator/launch/: estimator+motion.launch  launch_mavROS.sh  launch_simulation.launch  launch_system.launch  prog.launch  progWdrone_motionAimgproc_dummy.launch  px4_launch_gazebo.sh  run_simulation.sh  system.launch
src/PowerLineThesis/3D_estimator/src/: main.cpp
src/PowerLineThesis/Drone_Motion/: CMakeLists.txt  package.xml
src/PowerLineThesis/Drone_Motion/launch/: dummy.launch  prog.launch  progWimgProcDummy.launch
src/PowerLineThesis/Drone_Motion/src/: dummy_spammer.cpp  main.cpp
src/PowerLineThesis/External Libarys/Rw_lib/: CMakeLists.txt  licens.md  package.xml
src/PowerLineThesis/External Libarys/Rw_lib/include/: RobWorkConfig.hpp
src/PowerLineThesis/External Libarys/Rw_lib/include/rw/: math.hpp
src/PowerLineThesis/External Libarys/Rw_lib/include/rw/common/: InputArchive.hpp  OutputArchive.hpp  PropertyBase.hpp
src/PowerLineThesis/External Libarys/Rw_lib/include/rw/math/: LinearAlgebra.hpp  Math.hpp  RPY.hpp  Rotation3D.hpp  Transform3D.hpp  Vector3D.hpp
src/PowerLineThesis/External Libarys/Rw_lib/src/: EAA.cpp  Exception.cpp  Extension.cpp  ExtensionRegistry.cpp  IOUtil.cpp  LinearAlgebra.cpp  Log.cpp  LogStreamWriter.cpp  LogWriter.cpp  Math.cpp  Message.cpp  PropertyBase.cpp  PropertyMap.cpp  PropertyType.cpp  Quaternion.cpp  RPY.cpp  Random.cpp  RobWork.cpp  Rotation3D.cpp  Rotation3DVector.cpp  StringUtil.cpp  Timer.cpp  TimerUtil.cpp  Transform3D.cpp  Vector3D.cpp
src/PowerLineThesis/External Libarys/leddarLib/: CMakeLists.txt  package.xml
src/PowerLineThesis/External Libarys/leddarLib/include/: LdBitFieldProperty.h  LdBoolProperty.h  LdBufferProperty.h  LdCarrierEnhancedModbus.h  LdConnection.h  LdConnectionInfo.h  LdConnectionInfoEthernet.h  LdConnectionInfoModbus.h  LdConnectionInfoSpi.h  LdConnectionInfoUsb.h  LdConnectionModbusStructures.h  LdConnectionUniversal.h  LdConnectionUniversalModbus.h  LdConnectionUniversalSpi.h  LdDefines.h  LdDevice.h  LdDeviceFactory.h  LdDoubleBuffer.h  LdEnumProperty.h  LdEthernet.h  LdFloatProperty.h  LdIntegerProperty.h  LdInterfaceEthernet.h  LdInterfaceModbus.h  LdInterfaceSpi.h  LdInterfaceUsb.h  LdLibModbusSerial.h  LdLibUsb.h  LdObject.h  LdPropertiesContainer.h  LdProperty.h  LdPropertyIds.h  LdProtocolLeddartechUSB.h  LdProtocolsDefines.h  LdResultEchoes.h  LdResultProvider.h  LdSensor.h  LdSensorM16.h  LdSensorM16Laser.h  LdSensorM16Modbus.h  (+12 more)
src/PowerLineThesis/External Libarys/leddarLib/include/comm/: LtComEthernetPublic.h  LtComLeddarTechPublic.h  LtComUSBPublic.h
src/PowerLineThesis/External Libarys/leddarLib/include/comm/Legacy/M16/: LtComM16.h
src/PowerLineThesis/External Libarys/leddarLib/include/comm/Modbus/: LtComLeddarM16Modbus.h  LtComLeddarOneModbus.h  LtComLeddarVu8Modbus.h  LtComModbus.h
src/PowerLineThesis/External Libarys/leddarLib/include/comm/libs/BCM2835/src/: bcm2835.c  bcm2835.h
src/PowerLineThesis/External Libarys/leddarLib/include/comm/libs/libmodbus-3.0.6/src/: Makefile.am  modbus-LT.h  modbus-rtu.c
src/PowerLineThesis/External Libarys/leddarLib/include/comm/libs/libusb/: core.c  descriptor.c  hotplug.c  io.c  libusb.h  libusbi.h  strerror.c  sync.c
src/PowerLineThesis/External Libarys/leddarLib/include/comm/libs/libusb/os/: poll_windows.c  poll_windows.h  threads_windows.c  windows_nt_common.c  windows_winusb.c
src/PowerLineThesis/External Libarys/leddarLib/src/: LdBitFieldProperty.cpp  LdBoolProperty.cpp  LdBufferProperty.cpp  LdCarrierEnhancedModbus.cpp  LdConnection.cpp  LdConnectionFactory.cpp  LdConnectionInfoEthernet.cpp  LdConnectionInfoModbus.cpp  LdConnectionInfoSpi.cpp  LdConnectionInfoUsb.cpp  LdConnectionUniversal.cpp  LdConnectionUniversalModbus.cpp  LdConnectionUniversalSpi.cpp  LdDevice.cpp  LdDeviceFactory.cpp  LdDoubleBuffer.cpp  LdEnumProperty.cpp  LdEthernet.cpp  LdFloatProperty.cpp  LdIntegerProperty.cpp  LdInterfaceSpi.cpp  LdInterfaceUsb.cpp  LdLibModbusSerial.cpp  LdLibUsb.cpp  LdObject.cpp  LdPropertiesContainer.cpp  LdProperty.cpp  LdProtocolLeddarTech.cpp  LdProtocolLeddartechUSB.cpp  LdResultEchoes.cpp  LdResultProvider.cpp  LdResultStates.cpp  LdSensor.cpp  LdSensorM16.cpp  LdSensorM16Laser.cpp  LdSensorM16Modbus.cpp  LdSensorOneModbus.cpp  LdSensorVu.cpp  LdSensorVu8.cpp  LdSensorVu8Modbus.cpp  (+8 more)
src/PowerLineThesis/Image Acquisition/: CMakeLists.txt  package.xml
src/PowerLineThesis/Image Acquisition/launch/: OnlineStream.launch  Webcam.launch  airsim_img.launch
src/PowerLineThesis/Image Acquisition/src/: StreamCapture.cpp  airsim_images_main.cpp
src/PowerLineThesis/Image_processing/: CMakeLists.txt  package.xml
src/PowerLineThesis/Image_processing/include/: Matcher.hpp  PLineD.hpp  ProximityFiltering.hpp  ThicknessEstimator.hpp  VanishingPointFilter.hpp
src/PowerLineThesis/Image_processing/launch/: AirSimRecording.launch  dummy.launch  prog.launch
src/PowerLineThesis/Image_processing/src/: Dummy_main.cpp  Matcher.cpp  PLineD.cpp  ProximityFiltering.cpp  ThicknessEstimator.cpp  VanishingPointFilter.cpp  main.cpp
src/PowerLineThesis/Lidar_matcher/: CMakeLists.txt  package.xml
src/PowerLineThesis/Lidar_matcher/debug/: testMessage.sh
src/PowerLineThesis/Lidar_matcher/launch/: Lidar.launch  prog.launch
src/PowerLineThesis/Lidar_matcher/src/: main.cpp
src/PowerLineThesis/Messages/: CMakeLists.txt  package.xml
src/PowerLineThesis/Messages/msg/: head.msg  lidardat.msg  line2d.msg  line2d_array.msg  line3d.msg  line3d_array.msg  line_control_info.msg  matched_lidar_data.msg  matched_lidar_data_array.msg  pilot_cb.msg  position.msg
src/PowerLineThesis/Powerline_selector/: CMakeLists.txt  package.xml
src/PowerLineThesis/Powerline_selector/launch/: prog.launch
src/PowerLineThesis/Powerline_selector/src/: main.cpp
src/PowerLineThesis/data_logger/: CMakeLists.txt  package.xml
src/PowerLineThesis/data_logger/launch/: prog.launch
src/PowerLineThesis/data_logger/src/: main.cpp
(+80 files in other folders)
