<?xml version="1.0"?>
<package>
  <name>inspec_msg</name>
  <version>0.0.0</version>
  <description>The Image analysis program</description>
  <maintainer email="kalor14@student.sdu.dk">Kasper Hoej lorenzen</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>message_generation</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>


  <export>

  </export>
</package>
